section 2 and section 3>m-auto

--- a/5h.html
+++ b/5h.html
@@ -77,7 +77,7 @@
         <p class="w-29 m-w-40 flex gap-4 as p-10 m-py-20 rounded-8 items-center "><img src="./surat/video 1.png"
                 alt="s">Результат с первого урока </p>
     </aside>
-    <section class="max-w-1300 flex flex-column items-center m-p-20">
+    <section class="max-w-1300 flex flex-column m-auto items-center m-p-20">
         <h1 class=" text-center m-text-25 m-w-40">Откройте ребенку радость увлекательного <br class="m-none">
             развития без скуки и стресса </h1>
         <section
@@ -114,7 +114,7 @@
             </aside>
         </section>
     </section>
-    <section class=" py-80 width-80 m-auto max-w-100 gap-6 flex flex-column m-width-100 m-p-20">
+    <section class="max-w-1300 py-80 width-80 m-auto max-w-100 gap-6 flex flex-column m-width-100 m-p-20">
             <h1 class="text-center">Занимайтесь с удовольствием и достигайте новых вершин
                 следующие 2 месяца и всю жизнь </h1>
             <p class="text-20 text-center text-gray">KidsBe — это комплексная программа, помогающая получить
